--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 
 {
-  "name": "tierra-esperanza-cloud-run",
+  "name": "tierra-esperanza",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "express": "^4.18.2",
-    "path": "^0.12.7"
+    "express": "^4.18.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "echo 'No build step required for ESM static site'"
   }
 }
