build: Configure build and deployment settings
Updates the `build` script in `package.json` to explicitly copy necessary static assets and source files to a `public` directory. This ensures that all required components and files are available for deployment.

Additionally, `vercel.json` is updated to enable `cleanUrls` for improved SEO and user experience.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
   },
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'No build step required for ESM static site'"
+    "build": "mkdir -p public && cp index.html index.tsx types.ts constants.tsx metadata.json public/ && cp -r components services public/"
   }
 }
