--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,24 @@
 
 {
+  "version": 2,
   "cleanUrls": true,
   "trailingSlash": false,
+  "framework": null,
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
     }
   ]
 }
