--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "recharts": "^2.15.0",
-    "remix": "^2.15.3"
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "remix": "^2.15.3",
     "@vitejs/plugin-react": "^4.3.4",
     "vite": "^6.0.0",
     "typescript": "^5.0.0"
