--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
-
 {
   "name": "tierra-esperanza-gestion",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "description": "Sistema de Gestión de Comité de Vivienda Tierra Esperanza",
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2",
+    "@google/genai": "^1.34.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
-    "remix": "^2.15.3",
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vite": "^6.0.0"
   },
   "scripts": {
-    "start": "node server.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
