feat: Update Node.js version and build environment
Updates the project's Node.js version requirement to >=20.0.0 in package.json.
Adjusts the Netlify build environment to use Node 20 and adds an npm version flag.
This ensures compatibility with newer Node.js features and services.

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,11 @@
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "22.x"
+  NODE_VERSION = "20"
+  NPM_FLAGS = "--version"
 
 [[redirects]]
-  # Redirige todas las peticiones a index.html para que el enrutamiento del lado del cliente funcione
+  # Redirige todas las peticiones a index.html para que el enrutamiento de React funcione correctamente
   from = "/*"
   to = "/index.html"
   status = 200
