--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "description": "Sistema de Gestión de Comité de Vivienda Tierra Esperanza",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "dependencies": {
     "@google/genai": "^1.40.0",
     "react": "^19.2.4",
