--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@types/react": "^19.2.14",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.3",
     "typescript": "^5.0.0",
     "vite": "^7.3.1"
