feat: Add document summarization and MySQL support
Introduces a new Gemini AI function for summarizing documents and integrates MySQL as an alternative database backend. Includes necessary updates to `package.json`, `geminiService.ts`, `components/Secretariat.tsx`, and `server.ts` to support these features. Updates deployment documentation for Hostinger to include MySQL configuration and environment variables.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ NODE_ENV=development
 
 # Puerto del servidor (Hostinger lo asigna automáticamente, pero puedes forzarlo)
 PORT=3000
+
+# Configuración MySQL
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=tierra_esperanza
+DB_PORT=3306
