--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@google/genai": "^1.40.0",
     "cors": "^2.8.6",
     "express": "^5.2.1",
+    "mysql2": "^3.17.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0"
