feat: Restructure project and update entry points
Move server logic to `server/` directory and update entry points and build configurations accordingly.
Update package.json scripts, tsconfig.json include paths, ecosystem.config.cjs, and HOSTINGER_DEPLOY.md to reflect the new structure.
Refactor frontend App component to include initial setup and state management.
Introduce type definitions and constants for the application.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["index.tsx", "App.tsx", "types.ts", "constants.tsx", "components", "services"]
+  "include": ["src", "server"]
 }
