--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "vite": "^7.3.1"
   },
   "scripts": {
-    "dev": "tsx server.ts",
+    "dev": "tsx server/index.ts",
     "build": "vite build",
+    "start": "NODE_ENV=production tsx server/index.ts",
     "lint": "tsc --noEmit",
     "preview": "vite preview"
   }
