--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "mysql2": "^3.17.4",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "tsx": "^4.21.0",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
@@ -22,8 +24,6 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.3",
-    "tsx": "^4.21.0",
-    "typescript": "^5.0.0",
     "vite": "^7.3.1"
   },
   "scripts": {
