feat: Update Node.js version to 22.x
Updates the project to use Node.js version 22.x by modifying package.json and .nvmrc. This ensures compatibility with the latest Node.js features and security updates.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Sistema de Gestión de Comité de Vivienda Tierra Esperanza",
   "type": "module",
   "engines": {
-    "node": ">=20.0.0"
+    "node": "22.x"
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
