feat: Improve database fallback and validation
Enhance server resilience by implementing a fallback mechanism to the JSON database if MySQL initialization fails. This ensures application continuity.

Additionally, introduce RUT (Rol Único Tributario) validation in the attendance and board management components to improve data integrity and user experience. This validation provides real-time feedback on the correctness of RUT inputs.

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,14 @@
-# Variables de Entorno Requeridas
-
-# Clave de API para Inteligencia Artificial (Gemini)
-GEMINI_API_KEY=tu_clave_aqui
-
-# URL de la API (Dejar vacío para usar rutas relativas en el mismo dominio)
-# Ej: http://187.77.33.82:3000
-VITE_API_URL=
-
-# Entorno (development | production)
-NODE_ENV=development
-
-# Puerto del servidor
-PORT=3000
-
-# Configuración MySQL (Opcional, por defecto usa JSON)
+# Configuración de Base de Datos
+# Si USE_MYSQL es false, se usará data.json
 USE_MYSQL=false
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_NAME=tierra_esperanza
 DB_PORT=3306
+
+# Configuración de API
+VITE_API_URL=
+
+# Gemini API Key
+GEMINI_API_KEY=
